[gd_scene load_steps=25 format=3 uid="uid://cjtl1frwj4tmm"]

[ext_resource type="Script" uid="uid://dtfsuxh618lnw" path="res://Scripts/journal.gd" id="1_ofsdi"]
[ext_resource type="Theme" uid="uid://whcgauo3krnm" path="res://UI/journal.tres" id="2_314v7"]
[ext_resource type="Texture2D" uid="uid://cdbaknodlx4a2" path="res://UI/Super GUI Bundle 3 Paper Pack v1.0/Books/Book 1/Static Book/0.png" id="3_hs5q5"]
[ext_resource type="Script" uid="uid://c6amentcq2g7q" path="res://Scripts/log_page.gd" id="4_a5aj4"]
[ext_resource type="Texture2D" uid="uid://0gx5xt7t1es8" path="res://UI/Super GUI Bundle 3 Paper Pack v1.0/Books/Book 1/Animated Book/Page Flip/Left/4.png" id="4_w4han"]
[ext_resource type="Texture2D" uid="uid://qkjpe1dvhit8" path="res://UI/Super GUI Bundle 3 Paper Pack v1.0/Books/Book 1/Animated Book/Page Flip/Left/3.png" id="5_aguiy"]
[ext_resource type="Texture2D" uid="uid://m3civc5216w3" path="res://UI/Super GUI Bundle 3 Paper Pack v1.0/Books/Book 1/Animated Book/Page Flip/Left/2.png" id="6_ye5ua"]
[ext_resource type="Texture2D" uid="uid://b3yo8kxy20crn" path="res://UI/Super GUI Bundle 3 Paper Pack v1.0/Books/Book 1/Animated Book/Page Flip/Left/1.png" id="7_kwvva"]
[ext_resource type="Texture2D" uid="uid://bljtdoxj8l0r7" path="res://UI/Super GUI Bundle 3 Paper Pack v1.0/Books/Book 1/Animated Book/Page Flip/Left/0.png" id="8_nkxv3"]
[ext_resource type="Texture2D" uid="uid://cggkode1gaek4" path="res://UI/Super GUI Bundle 3 Paper Pack v1.0/Books/Book 1/Animated Book/Page Flip/Right/4.png" id="9_y0ixr"]
[ext_resource type="Texture2D" uid="uid://bj5fg8xpn73i8" path="res://UI/Super GUI Bundle 3 Paper Pack v1.0/Books/Book 1/Animated Book/Page Flip/Right/3.png" id="10_lte4h"]
[ext_resource type="Texture2D" uid="uid://berjfngyit887" path="res://UI/Super GUI Bundle 3 Paper Pack v1.0/Books/Book 1/Animated Book/Page Flip/Right/2.png" id="11_o5v5g"]
[ext_resource type="Texture2D" uid="uid://cnwvckhg6l0qe" path="res://UI/Super GUI Bundle 3 Paper Pack v1.0/Books/Book 1/Animated Book/Page Flip/Right/1.png" id="12_or0ic"]
[ext_resource type="Texture2D" uid="uid://gyjktrhqfinf" path="res://UI/Super GUI Bundle 3 Paper Pack v1.0/Books/Book 1/Animated Book/Page Flip/Right/0.png" id="13_v7gn0"]
[ext_resource type="Texture2D" uid="uid://bjfycsfg7pvxn" path="res://UI/spr_bookmark_cross.png" id="15_aguiy"]

[sub_resource type="SpriteFrames" id="SpriteFrames_qb4kw"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_w4han")
}, {
"duration": 1.0,
"texture": ExtResource("5_aguiy")
}, {
"duration": 1.0,
"texture": ExtResource("6_ye5ua")
}, {
"duration": 1.0,
"texture": ExtResource("7_kwvva")
}, {
"duration": 1.0,
"texture": ExtResource("8_nkxv3")
}],
"loop": false,
"name": &"left",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("9_y0ixr")
}, {
"duration": 1.0,
"texture": ExtResource("10_lte4h")
}, {
"duration": 1.0,
"texture": ExtResource("11_o5v5g")
}, {
"duration": 1.0,
"texture": ExtResource("12_or0ic")
}, {
"duration": 1.0,
"texture": ExtResource("13_v7gn0")
}],
"loop": false,
"name": &"right",
"speed": 8.0
}]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1bqal"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ww3uv"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_peu8u"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_emj02"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_qq747"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6n3ro"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_lvcnm"]

[sub_resource type="GDScript" id="GDScript_4djfu"]
resource_name = "exit_button"
script/source = "extends Button

@onready var label : RichTextLabel = find_child(\"RichTextLabel\")

func _ready() -> void:
	return
	var action_keycode = Ge.get_action_keycode(\"ui_cancel\")
	print(\"action_keycode: \"+str(action_keycode))
	if Ge.last_input_type == \"keyboard\":
		var filepath : String = \"res://UI/Buttons/button_keyboard_\" + action_keycode + \".png\"
		filepath = filepath.to_lower()
		if FileAccess.file_exists(filepath):
			icon = load(filepath)
		else:
			print(\"File doesn't exists %s\" % filepath)
	elif Ge.last_input_type == \"gamepad\":
		var filepath : String = \"res://UI/Buttons/buttons_xbox\" + action_keycode + \".png\"
		if FileAccess.file_exists(filepath):
			icon = load(filepath)
		else:
			print(\"File doesn't exists %s\" % filepath)
"

[node name="Journal" type="CanvasLayer" groups=["UIPanel"]]
script = ExtResource("1_ofsdi")

[node name="TextureRect" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_314v7")
texture = ExtResource("3_hs5q5")
expand_mode = 1

[node name="PageAnimation" type="AnimatedSprite2D" parent="TextureRect"]
position = Vector2(333.16934, 175)
scale = Vector2(0.74020815, 0.791587)
sprite_frames = SubResource("SpriteFrames_qb4kw")
animation = &"left"

[node name="TabContainer" type="TabContainer" parent="TextureRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 119.0
offset_top = 58.0
offset_right = -96.0
offset_bottom = -49.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_1bqal")
current_tab = 0
tabs_visible = false

[node name="Ann" type="TabContainer" parent="TextureRect/TabContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxEmpty_ww3uv")
current_tab = 0
tabs_visible = false
metadata/_tab_index = 0

[node name="Page1" type="TabBar" parent="TextureRect/TabContainer/Ann"]
layout_mode = 2
script = ExtResource("4_a5aj4")
metadata/_tab_index = 0

[node name="VSplitContainer" type="VSplitContainer" parent="TextureRect/TabContainer/Ann/Page1"]
layout_mode = 0
offset_left = -3.0
offset_top = -3.0
offset_right = 426.0
offset_bottom = 248.0

[node name="Pages" type="HSplitContainer" parent="TextureRect/TabContainer/Ann/Page1/VSplitContainer"]
custom_minimum_size = Vector2(0, 226)
layout_mode = 2
theme_override_constants/separation = 60
dragging_enabled = false

[node name="LeftPage" type="RichTextLabel" parent="TextureRect/TabContainer/Ann/Page1/VSplitContainer/Pages"]
custom_minimum_size = Vector2(188, 0)
layout_mode = 2
bbcode_enabled = true
text = "Folk think I go out only to gather berries, but truly I come here instead, and it makes my heart race so. They say goblins are wicked things, yet none show love as they do. Once a body grows used to it, there is no easy turning away, and men above seem wanting after.

"
scroll_active = false

[node name="RightPage" type="RichTextLabel" parent="TextureRect/TabContainer/Ann/Page1/VSplitContainer/Pages"]
custom_minimum_size = Vector2(188, 0)
layout_mode = 2
bbcode_enabled = true
text = "The way they move is all thoughtless and natural, as beasts are, and there is something honest in it that I cannot put from my mind."
scroll_active = false

[node name="PageNumbers" type="HSplitContainer" parent="TextureRect/TabContainer/Ann/Page1/VSplitContainer"]
layout_mode = 2
theme_override_constants/separation = 32
split_offset = 200
dragging_enabled = false

[node name="LeftPageNumber" type="Label" parent="TextureRect/TabContainer/Ann/Page1/VSplitContainer/PageNumbers"]
layout_mode = 2
text = "1"
horizontal_alignment = 1

[node name="RightPageNumber" type="Label" parent="TextureRect/TabContainer/Ann/Page1/VSplitContainer/PageNumbers"]
layout_mode = 2
text = "2"
horizontal_alignment = 1

[node name="Page2" type="TabBar" parent="TextureRect/TabContainer/Ann"]
visible = false
layout_mode = 2
script = ExtResource("4_a5aj4")
metadata/_tab_index = 1

[node name="VSplitContainer" type="VSplitContainer" parent="TextureRect/TabContainer/Ann/Page2"]
layout_mode = 0
offset_left = -3.0
offset_top = -3.0
offset_right = 426.0
offset_bottom = 248.0

[node name="Pages" type="HSplitContainer" parent="TextureRect/TabContainer/Ann/Page2/VSplitContainer"]
custom_minimum_size = Vector2(0, 226)
layout_mode = 2
theme_override_constants/separation = 60
dragging_enabled = false

[node name="LeftPage" type="RichTextLabel" parent="TextureRect/TabContainer/Ann/Page2/VSplitContainer/Pages"]
custom_minimum_size = Vector2(188, 0)
layout_mode = 2
bbcode_enabled = true
text = "I think I am lost. I have walked this same passage four times now. I should never have strayed so far in. I am in a dreadful mess.

"
scroll_active = false

[node name="RightPage" type="RichTextLabel" parent="TextureRect/TabContainer/Ann/Page2/VSplitContainer/Pages"]
custom_minimum_size = Vector2(188, 0)
layout_mode = 2
bbcode_enabled = true
text = "If the Village Elder learns of my secret wanderings, he will be sorely angered and forbid me from ever coming again. I must find my way back, I must."
scroll_active = false

[node name="PageNumbers" type="HSplitContainer" parent="TextureRect/TabContainer/Ann/Page2/VSplitContainer"]
layout_mode = 2
theme_override_constants/separation = 32
split_offset = 200
dragging_enabled = false

[node name="LeftPageNumber" type="Label" parent="TextureRect/TabContainer/Ann/Page2/VSplitContainer/PageNumbers"]
layout_mode = 2
text = "3"
horizontal_alignment = 1

[node name="RightPageNumber" type="Label" parent="TextureRect/TabContainer/Ann/Page2/VSplitContainer/PageNumbers"]
layout_mode = 2
text = "4"
horizontal_alignment = 1

[node name="CloseButton" type="Button" parent="TextureRect"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -103.0
offset_top = -328.0
offset_right = -94.0
offset_bottom = -319.0
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 8
size_flags_vertical = 8
theme_override_styles/normal = SubResource("StyleBoxEmpty_peu8u")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_emj02")
theme_override_styles/hover = SubResource("StyleBoxEmpty_qq747")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_6n3ro")
theme_override_styles/focus = SubResource("StyleBoxEmpty_lvcnm")
icon = ExtResource("15_aguiy")
icon_alignment = 2
script = SubResource("GDScript_4djfu")

[connection signal="animation_finished" from="TextureRect/PageAnimation" to="." method="_on_page_animation_animation_finished"]
[connection signal="pressed" from="TextureRect/CloseButton" to="." method="_on_close_button_pressed"]
